# nssa_AiAgentPlatform

./: .env.example  .gitignore  README.md  __init__.py  aiagent.md  main.py  pyproject.toml  test_api.html  test_mysql_mcp.py  口播稿_AI智能中枢系统介绍.md
agents/: __init__.py  base_agent.py  database_agent.py  network_diag_agent.py
config/: agent_config.yaml  agent_mapping.yaml  langchain_config.yaml  langgraph_config.yaml  llm_config.yaml  logging_config.yaml  mcp_config.yaml  optimization_config.yaml  router_prompt.yaml  tools_config.yaml  workflow_templates.yaml
docs/: OPENWEBUI_INTEGRATION.md  REUSABLE_COMPONENTS.md
graph_service/: __init__.py  graph.py  main.py  openai_api.py  state.py
graph_service/nodes/: __init__.py  database_agent.py  final_answer.py  network_agent.py  react_act.py  react_observe.py  react_think.py  router.py  user_input.py
graph_service/utils/: __init__.py  complexity_analyzer.py  history_compressor.py  result_summarizer.py  result_validator.py
mcp_manager/: __init__.py  client_manager.py  connection_legacy.py  error_handler.py  manager.py  stdio_connection.py
mcp_manager/adapters/: __init__.py  langchain_adapter.py
mcp_servers/: __init__.py
mcp_servers/gemini_rag_mcp/: __init__.py  server.py
netprobe/pkg/probe/: http.go  (+3 more)
scripts/: restart_all.sh  start_all.sh  stop_all.sh
tests/: test_api.py  test_e2e_react.py  test_integration.py  test_mcp_stdio.py  test_react.py
tool_gateway/: gateway.py
utils/: __init__.py  config_loader.py  config_manager.py  config_watcher.py  llm_wrapper.py  logger.py  query_cache.py  token_tracker.py
(+7 files in other folders)
